# Asset-Management-System

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  sonar-project.properties
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_init_core_tables.py  20260504_0002_widen_repair_vendor.py  20260506_0003_add_asset_action_histories.py  20260506_0004_add_assignment_dates_and_repair_id.py  20260511_0004_add_composite_indexes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  asset.py  asset_action_history.py  mixins.py  repair_image.py  repair_request.py  user.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_alembic_migration_chain.py  test_asset_history.py  test_assets.py  test_auth_admin_create_user.py  test_auth_deps.py  test_auth_login_me.py  test_auth_register.py  test_composite_indexes_migration.py  test_config.py  test_cors.py  test_enum_lookup_error.py  test_enum_metadata_invariant.py  test_error_envelope.py  test_health.py  test_image_storage_s3.py  test_images.py  test_main_startup.py  test_models_registry.py  test_openapi_contract.py  test_rate_limit.py  test_repair_requests.py  test_security.py  test_seed_bootstrap.py  test_session.py  test_users.py
(+194 files in other folders)
